overflow fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,7 @@
 
 .pie{
   align-items: right;
+  height: 20px;
 }
 
 #myBar {
@@ -103,11 +104,12 @@ vertical-align: top;
 text-align: left;
 font-weight: bold;
 background-color: #222;
-height: 85%;
+height: 100%;
 width: 70%;
 padding: 10px;
 z-index: 5;
 position: absolute;
+overflow: auto;
 }
 
 .fa-minus-square-o:hover {
